@@ -1,0 +1,70 @@
+			[
+			// See tones section of article at: https://en.wikipedia.org/wiki/Pinyin
+
+			// 1st tone:
+			["a'1", "ā"],
+			["A'1", "Ā"],
+			["e'1", "ē"],
+			["E'1", "Ē"],
+			["i'1", "ī"],
+			["I'1", "Ī"],
+			["o'1", "ō"],
+			["O'1", "Ō"],
+			["U'1", "Ū"],
+			["u'1", "ū"],
+			["UE'1", "Ǖ"],
+			["Ue'1", "Ǖ"],
+			["ue'1", "ǖ"],
+
+			// 2nd tone:
+			["a'2", "á"],
+			["A'2", "Á"],
+			["e'2", "é"],
+			["E'2", "É"],
+			["i'2", "í"],
+			["I'2", "Í"],
+			["o'2", "ó"],
+			["O'2", "Ó"],
+			["U'2", "Ú"],
+			["u'2", "ú"],
+			["UE'2", "Ǘ"],
+			["Ue'2", "Ǘ"],
+			["ue'2", "ǘ"],
+
+			// 3rd tone:
+			["a'3", "ǎ"],
+			["A'3", "Ǎ"],
+			["e'3", "ě"],
+			["E'3", "Ě"],
+			["i'3", "ǐ"],
+			["I'3", "Ǐ"],
+			["o'3", "ǒ"],
+			["O'3", "Ǒ"],
+			["U'3", "Ǔ"],
+			["u'3", "ǔ"],
+			["UE'3", "Ǚ"],
+			["Ue'3", "Ǚ"],
+			["ue'3", "ǚ"],
+
+			// 4th tone:
+			["a'4", "à"],
+			["A'4", "À"],
+			["e'4", "è"],
+			["E'4", "È"],
+			["i'4", "ì"],
+			["I'4", "Ì"],
+			["o'4", "ò"],
+			["O'4", "Ò"],
+			["U'4", "Ù"],
+			["u'4", "ù"],
+			["UE'4", "Ǜ"],
+			["Ue'4", "Ǜ"],
+			["ue'4", "ǜ"],
+
+			// 5th tone / neutral tone:
+			["Ue'5", "Ü"],
+			["ue'5", "ü"],
+			["Ue'0", "Ü"],
+			["ue'0", "ü"],
+			["&'0", "·"]
+			];
