@@ -1,0 +1,208 @@
+<!DOCTYPE html>
+<!-- Software License is MIT and is in a comment at the bottom of this file. -->
+<html lang='en'>
+<head>
+	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+
+	<title>Type and Replace: Pinyin</title>
+</head>
+<body onload="setUp()" style="font-family: times">
+	<!-- We use times because Courier font does not display left half ring and right half ring correctly. It confuses them.-->
+	<h1>Type and Replace: Pinyin</h1>
+	<p>This is a page making it easier to type characters required for typing Pinyin. This page is intended to be useful when a person wants to type Pinyin but does not have the correct keyboard setup. When you do not have a special keyboard layout, you can come to this page, read the legend on this page, type text in the textbox, and press the button labelled "Replace".</p>	
+	<p>This page can be downloaded, and after downloading can run on a computer even without internet.</p>
+	
+	<h2>Type text</h2>
+	<div>
+		<label for="userInputBox">Type Text into following box:</label>
+	</div>
+	<textarea id="userInputBox" oninput="reactToUserTypingCharacter()" cols="50" rows="10" aria-live="assertive" style="font-family: times; font-size: large; padding: 0.5em"></textarea>
+	<h2>Replace:</h2>
+	<button onclick="transformCharacters()">Replace</button>
+
+	<input type="checkbox" id="normalizeLock" name="normalizeLock" onclick="updateNormalizationLock();" checked> <label for="normalizeLock">Replace as you type.</label>
+
+	<!-- The following legend will be populated when the script runs. -->
+	<div id="legend" style="font-family: times; font-size: x-large">
+
+	</div>
+
+	<footer>
+		<p><a style="font-size: x-small; margin-left: 5em" href="https://github.com/elsanussi-s-mneina/type-and-replace-html-js">Get source code and documentation: v1.11, (2021-03-01). Made by Elsanussi Mneina</a></p>
+	</footer>  
+
+	<script>
+		normalizationLock = false;
+		
+		
+		replacements = 
+						[
+			// See tones section of article at: https://en.wikipedia.org/wiki/Pinyin
+
+			// 1st tone:
+			["a'1", "ā"],
+			["A'1", "Ā"],
+			["e'1", "ē"],
+			["E'1", "Ē"],
+			["i'1", "ī"],
+			["I'1", "Ī"],
+			["o'1", "ō"],
+			["O'1", "Ō"],
+			["U'1", "Ū"],
+			["u'1", "ū"],
+			["UE'1", "Ǖ"],
+			["Ue'1", "Ǖ"],
+			["ue'1", "ǖ"],
+
+			// 2nd tone:
+			["a'2", "á"],
+			["A'2", "Á"],
+			["e'2", "é"],
+			["E'2", "É"],
+			["i'2", "í"],
+			["I'2", "Í"],
+			["o'2", "ó"],
+			["O'2", "Ó"],
+			["U'2", "Ú"],
+			["u'2", "ú"],
+			["UE'2", "Ǘ"],
+			["Ue'2", "Ǘ"],
+			["ue'2", "ǘ"],
+
+			// 3rd tone:
+			["a'3", "ǎ"],
+			["A'3", "Ǎ"],
+			["e'3", "ě"],
+			["E'3", "Ě"],
+			["i'3", "ǐ"],
+			["I'3", "Ǐ"],
+			["o'3", "ǒ"],
+			["O'3", "Ǒ"],
+			["U'3", "Ǔ"],
+			["u'3", "ǔ"],
+			["UE'3", "Ǚ"],
+			["Ue'3", "Ǚ"],
+			["ue'3", "ǚ"],
+
+			// 4th tone:
+			["a'4", "à"],
+			["A'4", "À"],
+			["e'4", "è"],
+			["E'4", "È"],
+			["i'4", "ì"],
+			["I'4", "Ì"],
+			["o'4", "ò"],
+			["O'4", "Ò"],
+			["U'4", "Ù"],
+			["u'4", "ù"],
+			["UE'4", "Ǜ"],
+			["Ue'4", "Ǜ"],
+			["ue'4", "ǜ"],
+
+			// 5th tone / neutral tone:
+			["Ue'5", "Ü"],
+			["ue'5", "ü"],
+			["Ue'0", "Ü"],
+			["ue'0", "ü"],
+			["&'0", "·"]
+			];
+
+		;
+
+		function setUp()
+		{
+			setUpLegend();
+
+			// The following call ensures that the
+			// checkbox and normalization lock
+			// do not become out of sync after a page refresh.
+			updateNormalizationLock();
+		}
+
+		// Places an explanation of what characters 
+		// change when normalization occurs.
+		// It places it as a legend the user can read.
+		function setUpLegend()
+		{
+			var legend = document.getElementById("legend");
+
+			var legendMarkup = "<h3>Legend</h3><ul>";
+
+			for (var i = 0; i < replacements.length; i++)
+			{
+				legendMarkup += "\n<li>" + replacements[i][0] + " becomes " + replacements[i][1] + "</li>";
+			}
+
+			legend.innerHTML = legendMarkup;
+		}
+
+		function transformCharacters()
+		{
+			var oldInput = document.getElementById("userInputBox").value;
+			
+			if (oldInput.length >= 2)
+			{
+				var newInput = "";
+				var replacedCurrentChar = false;
+				for (var i = 0; i < oldInput.length; i++)
+				{
+					replacedCurrentChar = false;
+					for (var j = 0; j < replacements.length && !replacedCurrentChar; j++)					
+					{
+						if (oldInput.substring(i, i + replacements[j][0].length) == replacements[j][0])
+						{
+							newInput += replacements[j][1];
+							i += replacements[j][0].length; // Skip as many characters as we read in.
+							replacedCurrentChar = true;
+						}
+					}
+					if (!replacedCurrentChar)
+					{
+						newInput += oldInput.charAt(i);
+					}
+				}
+				document.getElementById("userInputBox").value = newInput;
+			}
+		}
+
+		// Some users may prefer seeing the characters change as they type.
+		// This function along with a checkbox allow this behaviour.
+		function updateNormalizationLock()
+		{
+			normalizationLock = document.getElementById("normalizeLock").checked;
+		}
+
+		function reactToUserTypingCharacter()
+		{
+			if (normalizationLock)
+			{
+				transformCharacters();
+			}
+		}
+	</script>
+</body>
+</html>
+
+<!--
+MIT License
+
+Copyright (c) 2021 Elsanussi S. Mneina
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+SOFTWARE.
+-->
