@@ -26,3 +26,6 @@ At the same time the following orthographies have been added: French, Spanish or
 
 2021-03-02 v1.11
 - Add padding to text area to make text clearer: (because the diacritics sometimes got cut off)
+
+2021-03-02 (no version change)
+- Add support for Pinyin
